
        - The 'get_date_format_spec' lua hook now has an additional parameter
          which hints at the wanted format (f.e. a short date or a long date
          time). The default implementation now returns '%x' for short and
          long dates, '%X' for short and long times (currently unused) and
          '%x %X' for short and long date times.

        New features

        - Added portuguese translation (thanks to Américo Monteiro)

        Bugs fixed

        - 'passphrase' now allows an empty new password to be given
          (fixes monotone bug #28809)

        - monotone no longer throws an exception on Windows if it is
          interrupted (^C); a couple of other bug have been fixed for this
          platform as well which generally improve the compatibility.

        - The annotation of 'annotate' is now localized.

        Other

        - Roster handling has been sped up significantly, and roster cache
          performance has been fixed for the case of overly large rosters.
          This should be mostly noticable when digging through history
          (especially initial pulls, since those send so many revisions),
          and be more noticable for projects with larger trees.

          The most significant internal change from this is that rosters and
          marking_maps are now copy-on-write. A longer overview of the internal
          changes is at:
          http://lists.gnu.org/archive/html/monotone-devel/2010-02/msg00043.html

        - Improve the compatibility with newer Botan versions.

Sun Jan 17 21:40:35 UTC 2010

        0.46 release.

        Changes

        - "automate stdio" (and "automate remote_stdio", see below)
          use separate streams to encode out-of-band information like
          informational messages, warnings or tickers. A special
          "header" section has been added to the standard output to
          identify future stdio version changes. The error codes used