@@ -749,7 +749,7 @@ CMD(clone, "clone", "", CMD_REF(network),
           P(F("branch %s has multiple heads:") % branchname);
           for (set<revision_id>::const_iterator i = heads.begin(); i != heads.end(); ++i)
             P(i18n_format("  %s")
-              % describe_revision(project, *i));
+              % describe_revision(app.opts, app.lua, project, *i));
           P(F("choose one with '%s clone -r<id> SERVER BRANCH'") % prog_name);
           E(false, origin::user, F("branch %s has multiple heads") % branchname);
         }
